--- a/default.html
+++ b/default.html
@@ -8,13 +8,10 @@
 
         <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
 
-        <link rel="stylesheet" href="{{ site.url }}/fonts/arq.css">
-        <link rel="stylesheet" href="{{ site.url }}/css/main.css">
-        <link rel="stylesheet" href="{{ site.url }}/css/bootstrap.min.css">
-        <link rel="stylesheet" href="{{ site.url }}/css/bootstrap-theme.css">
-		<script type="text/javascript" src="{{ site.url }}/js/bootstrap.js"></script>
-        <script type="text/javascript" src="{{ site.url }}/js/vendor/modernizr-2.6.2.min.js"></script>		
-        <title>{{ page.title }}</title>
+        <link rel="stylesheet" type="text/css" href="fonts/arq.css">
+        <link rel="stylesheet" type="text/css" href="css/main.css">
+        <script src="js/vendor/modernizr-2.6.2.min.js"></script>
+		<title>{{ page.title }}</title>
 	</head>
 
 	<body>
