--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@ title: Jekyll Test Site
  
 
 <section class="list postlist">
-	<h1>Class Blog Posts</h1>
+	<h1>Noah Boyle Class Blog</h1>
 	
 	{% for post in site.posts %}  
 	<article>
