--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@ title: Jekyll Test Site
 ---
 <!--Everything that we are writing in the index will be put into the default template-->
  
-
+<div class="lg-6">
 <section class="list postlist">
 	<h1>Noah Boyle Class Blog</h1>
 	
@@ -21,7 +21,10 @@ title: Jekyll Test Site
 	</article>
 	{% endfor %}
 </section>
+</div>
 
+<div class="lg-6">
 <section class="nav">
 {% include nav-projects.html %}
 </section>
+</div>
