--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@ title: Jekyll Test Site
 ---
 <!--Everything that we are writing in the index will be put into the default template-->
  
-<div class="lg-6">
+<div class="col-lg-12"> 
+<div class="col-lg-6">
 <section class="list postlist">
 	<h1>Noah Boyle Class Blog</h1>
 	
@@ -23,8 +24,9 @@ title: Jekyll Test Site
 </section>
 </div>
 
-<div class="lg-6">
+<div class="col-lg-6">
 <section class="nav">
 {% include nav-projects.html %}
 </section>
+</div>
 </div>
