--- a/index.html
+++ b/index.html
@@ -3,11 +3,14 @@ layout: default
 title: Jekyll Test Site
 ---
 <!--Everything that we are writing in the index will be put into the default template-->
- 
+
+<header>
+<h1>Noah Boyle Class Blog</h1> 
+</header>
 <div class="col-lg-12"> 
 <div class="col-lg-6">
 <section class="list postlist">
-	<h1>Noah Boyle Class Blog</h1>
+	
 	
 	{% for post in site.posts %}  
 	<article>
