--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@ title: Jekyll Test Site
 </section>
 </div>
 
-<div class="col-lg-6-offset-3">
+<div class="col-lg-6">
 <section class="nav">
 {% include nav-projects.html %}
 </section>
